# rayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: image.hpp  plane.hpp  primitive.hpp  sphere.hpp  vector3.hpp
include/camera/: perspectiveCamera.hpp
include/light/: spotLight.h
lib/: CMakeLists.txt
rayTracer/: CMakeLists.txt  main.cpp
rayTracer/include/: Camera.h  FileUtils.h  Hittable.h  Plane.h  Ray.h  Sphere.h  Triangle.h  Vector3.h  image.hpp  material.hpp  plane.hpp  primitive.hpp  ray.hpp  sphere.hpp  test.hpp  triangle.hpp  vector3.hpp
rayTracer/include/camera/: orthogonalCamera.hpp  perspectiveCamera.hpp
rayTracer/include/light/: SpotLight.h  lightSource.hpp  pointLight.hpp
rayTracer/src/: Camera.cpp  Plane.cpp  image.cpp  plane.cpp  ray.cpp  sphere.cpp  triangle.cpp
rayTracer/src/camera/: orthogonalCamera.cpp  perspectiveCamera.cpp
src/: image.cpp  plane.cpp  ray.cpp  triangle.cpp
src/camera/: orthogonalCamera.cpp  perspectiveCamera.cpp
